--- a/.gitignore
+++ b/.gitignore
@@ -24,7 +24,7 @@ $RECYCLE.BIN/
 package.json
 primary.js
 InsertSQL.js
-readme.md
+README.md
 
 # =========================
 # Operating System Files
