Tests POO, bugs encore sur le remplissage de l'Array "cleanData"

--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "version": "1.0.0",
+  "main":"app.js",
   "name": "GilliardPrj",
   "description": "Serial Acquisition for Arduinos",
   "author": "Mickael Bonjour <mbonjourprotonmail.ch>",
