--- a/.gitignore
+++ b/.gitignore
@@ -22,10 +22,10 @@ $RECYCLE.BIN/
 
 #But not these
 package.json
-primary.js
 InsertSQL.js
 README.md
 store.js
+app.js
 
 # =========================
 # Operating System Files
