--- a/.gitignore
+++ b/.gitignore
@@ -17,14 +17,7 @@ $RECYCLE.BIN/
 # Windows shortcuts
 *.lnk
 
-#Ignore Everything
-*
-
-#But not these
-package.json
-README.md
-store.js
-app.js
+/node_modules/
 
 # =========================
 # Operating System Files
