Refactor avec SN

--- a/configs/configs_sample.json
+++ b/configs/configs_sample.json
@@ -4,6 +4,7 @@
         "password": "",
         "name": ""
     },
+    //TODO: multiple modules
     "Module": {
         "port": "",
         "rate": 9600
