premier jet construction multiModules (fonctionnel)

--- a/.gitignore
+++ b/.gitignore
@@ -20,6 +20,8 @@ $RECYCLE.BIN/
 /.vscode/**
 /node_modules/**
 /configs/configs.json
+/DAL/testBDD1.sql
+/DAL/testBDD2.sql
 
 
 # =========================
