--- a/package.json
+++ b/package.json
@@ -5,11 +5,10 @@
   "description": "Serial Acquisition for Arduinos",
   "author": "Mickael Bonjour <mbonjourprotonmail.ch>",
   "dependencies": {
-    "epfl-enac-gilliarddb": "0.0.4",
+    "epfl-enac-gilliarddb": "^0.0.4",
     "mysql": "^2.10.2",
     "sequelize": "^3.23.2",
     "serialport": "^3.1.2",
-    "string": "^3.3.1",
     "tedious": "^1.14.0",
     "uuid": "^2.0.2"
   }
