--- a/package.json
+++ b/package.json
@@ -10,6 +10,13 @@
     "sequelize": "^3.23.2",
     "serialport": "^3.1.2",
     "tedious": "^1.14.0",
-    "uuid": "^2.0.2"
+    "uuid": "^2.0.2",
+    "forever":"^0.15.2"
+  },
+
+  "scripts": {
+    "start": "forever start -o ./logs/logForever.log -m 10 app.js ",
+    "stop": "forever stop app.js",
+    "list": "forever list"
   }
 }
