Add commentaries, refactor, JSDocs, update configs sample

--- a/configs/configs_sample.json
+++ b/configs/configs_sample.json
@@ -9,37 +9,35 @@
     "acquisitionSys": {
         "responsible": "mbonjour <mickael.bonjour@epfl.ch>",
         "sciper": "240312",
-        "AppVersion":"1.0",
+        "AppVersion": "1.0",
         "boards": [
             {
                 "port": "COM3", //Attention clé de lien avec l'sysAcqu (ne pas switcher les ports usb sans modifier la conf)
                 "rate": 9600,
                 "name": "FirstModule", //optionel mais préférable pour le log
-                "model": "Arduino UNO" //optionel
-                // "sensors": [ //!!!! optionel --> Dans cette version il ne faut pas mettre sensors !!!!!
-                //     {
-                //         "SID": "", //optionel sauf si vous mettez des valeurs dans les champs suivant
-                //         "Type": "Temperature", //optionel
-                //         "Model": "", //optionel
-                //         "Unit": "° Celsius", //optionel
-                //         "BoardPins": "12:13" //optionel
-                //     }
-                // ]
+                "model": "Arduino UNO", //optionel
+                "sensors": { //!!!! optionel 
+                    "TC1":{
+                        "Type": "Temperature", //optionel
+                        "Model": "", //optionel
+                        "Unit": "° Celsius", //optionel
+                        "BoardPins": "12:13" //optionel
+                    }
+                }
             },
             {
                 "port": "COM4",
                 "rate": 4800,
                 "name": "SecondModule", //optionel mais préférable pour le log
-                "model": "Arduino DUE" //optionel
-                // "sensors": [ !!!! optionel --> Dans cette version il ne faut pas mettre sensors !!!!!
-                //     {
-                //         "SID": "", //optionel sauf si vous mettez des valeurs dans les champs suivant
-                //         "Type": "Pression atmosphérique", //optionel
-                //         "Model": "", //optionel
-                //         "Unit": "pascals", //optionel
-                //         "BoardPins": "14:15" //optionel
-                //     }
-                // ]
+                "model": "Arduino DUE", //optionel
+                "sensors": { //!!!! optionel 
+                    "P01":{
+                        "Type": "Pression atmosphérique", //optionel
+                        "Model": "", //optionel
+                        "Unit": "pascals", //optionel
+                        "BoardPins": "14:15" //optionel
+                    }
+                }
             }
         ]
     }
